# hypha-startup-services

./: .gitignore  .gitmodules  DEPLOYMENT.md  README.md  WEAVIATE_BIOIMAGE_SERVICE.md  bioimage_data_export.json  codecs.md  minimal_monkey_patch.py  pyproject.toml  pytest.ini  requirements.txt  requirements_test.txt  ruff.toml  setup.py  test_remote_bioimage_query.py  values-simple.yaml  values-weaviate-extended.yaml
.github/: copilot-instructions.md
docker/: Dockerfile  docker-compose.yml
docs/: HyphaArtifact.md
examples/: README.md  __init__.py  build_weaviate_bioimage_database.py  create_bioimage_collection.py  create_collection.py  debug_exact_error.py  export_bioimage_data.py  populate_shared_bioimage_data.py  reproduce_issue.py  weaviate_service_example.py
hypha_startup_services/: HyphaArtifact.py  __main__.py  artifact.py  artifacts.py  collection_utils.py  create_collection.py  hypha_artifact.py  mem0.py  mem0_methods.py  permissions.py  project_index.py  register_mem0_service.py  register_service.py  register_weaviate_service.py  service_codecs.py  start_weaviate_service.py  weaviate_client.py  weaviate_methods.py
k8s-files/: values-combined.yaml  values.yaml
scripts/: build_bioimage_index.py  build_bioimage_index_deduplicated.py  convert_eb_data.py  delete_test_artifacts.py  start-services.sh  test_bioimage_service.py
tests/: README.md  __init__.py  conftest.py  create_collection.py  start_server.py  test_chunking.py  test_hypha_artifact.py  test_schema_preservation.py  test_virtual_collections.py  test_weaviate_admin.py  test_weaviate_data.py  (+9 more)
(+143 files in other folders)
