[build-system]
requires = ["setuptools>=65.0.0", "wheel"]

[project]
name = "hypha-startup-services"
version = "0.0.1"
readme = "README.md"
description = "Hypha Startup Services package, used with Hypha."
requires-python = ">=3.11"
dependencies = [
  "mem0ai",
]
license = "MIT"
license-files = ["LICENSE"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["hypha_startup_services*"]