[build-system]
requires = ["setuptools>=65.0.0", "wheel"]

[project]
name = "hypha-startup-services"
version = "0.0.1"
readme = "README.md"
description = "Hypha Startup Services for use by Hypha Agents."
requires-python = ">=3.11"
dependencies = [
  "mem0ai",
  "weaviate-client>=4.11.2",
  "setuptools>=70.0.0",
  "hypha-rpc>=0.20.55",
  "python-dotenv>=0.9.0"
]
license = "MIT"
license-files = ["LICENSE"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["hypha_startup_services*"]

[project.scripts]
hss_weaviate = "hypha_startup_services.weaviate_service.__main__:main"